[workspace]

resolver = "2"

members = [
    "crates/ibc-types",
    "crates/ibc-types2",
    "crates/ibc-types-timestamp",
    "crates/ibc-types-identifier",
    "crates/ibc-types-domain-type",
    "crates/ibc-types-core-client",
    "crates/ibc-types-core-connection",
    "crates/ibc-types-core-channel",
    #"crates/ibc-types-lightclients-tendermint",
]

exclude = [
    "ci/no-std-check",
]