[package]
name = "no-std-check"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
ibc-types = { path = "../../crates/ibc-types", default-features = false, features = [
  "serde",
  "mocks-no-std",
] }
ibc-proto = { version = "0.42.0", default-features = false }
tendermint = { version = "0.34.0", default-features = false }
tendermint-proto = { version = "0.34.0", default-features = false }
tendermint-light-client-verifier = { version = "0.34.0", default-features = false, features = ["rust-crypto"] }

sp-core = { version = "17.0.0", default-features = false, optional = true }
sp-io = { version = "18.0.0", default-features = false, optional = true }
sp-runtime = { version = "19.0.0", default-features = false, optional = true }
sp-std = { version = "6.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = ["sp-core", "sp-io", "sp-runtime", "sp-std"]
substrate-std = ["sp-core/std", "sp-io/std", "sp-runtime/std", "sp-std/std"]
