[package]
name         = "ibc-types-core-client"
version      = "0.14.1"
edition      = "2021"
license      = "Apache-2.0"
readme       = "../../README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/penumbra-zone/ibc-types"
authors      = ["Penumbra Labs <team@penumbralabs.xyz"]
rust-version = "1.60"
description  = """
    Data types for the Inter-Blockchain Communication (IBC) protocol.
    This crate defines common data structures that can be reused by different IBC implementations or ecosystem tooling.
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "bytes/std",
    "displaydoc/std",
    "ibc-proto/std",
    "ibc-types-identifier/std",
    "ibc-types-timestamp/std",
    "ics23/std",
    "num-traits/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
    "sha2/std",
    "subtle-encoding/std",
    "tendermint/clock",
    "tendermint/std",
]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info"]
borsh = ["dep:borsh"]

# This feature is required for token transfer (ICS-20)
with_serde = ["serde", "serde_derive", "serde_json", "ibc-proto/serde"]

# This feature guards the unfinished implementation of the `UpgradeClient` handler.
upgrade_client = []

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint/clock", "cfg-if"]
mocks-no-std = ["cfg-if"]

[dependencies]
borsh = {version = "0.10.0", default-features = false, optional = true }
bytes = { version = "1.2.1", default-features = false }
cfg-if = { version = "1.0.0", optional = true }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
displaydoc = { version = "0.2", default-features = false }
ibc-proto = { version = "0.51.1", default-features = false }
ibc-types-domain-type = { version = "0.14.1", path = "../ibc-types-domain-type", default-features = false }
ibc-types-identifier = { version = "0.14.1", path = "../ibc-types-identifier", default-features = false }
ibc-types-timestamp = { version = "0.14.1", path = "../ibc-types-timestamp", default-features = false }
ics23 = { version = "0.12.0", default-features = false, features = ["host-functions"] }
num-traits = { version = "0.2.15", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["full"], optional = true }
prost = { version = "0.13.3", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0.104", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, optional = true }
sha2 = { version = "0.10.6", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
time = { version = "0.3", default-features = false }
anyhow = { version = "1", default-features = false }

[dependencies.tendermint]
version = "0.40.0"
default-features = false

[dependencies.tendermint-proto]
version = "0.40.0"
default-features = false

[dev-dependencies]
cfg-if = { version = "1.0.0" }

