[package]
name         = "ibc-types-transfer"
version      = "0.15.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "../../README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/penumbra-zone/ibc-types"
authors      = ["Penumbra Labs <team@penumbralabs.xyz"]
rust-version = "1.60"
description  = """
    Data types for the Inter-Blockchain Communication (IBC) protocol.
    This crate defines common data structures that can be reused by different IBC implementations or ecosystem tooling.
"""
# Not publishing to crates.io yet; will iterate quickly via git deps.
publish	= true
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "serde/std",
    "displaydoc/std",
]

# This feature guards the unfinished implementation of the `UpgradeClient` handler.
upgrade_client = []

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint-testgen", "cfg-if", "parking_lot"]
mocks-no-std = ["cfg-if"]
with_serde = ["serde", "serde_derive"]

[dependencies]
# Proto definitions for all IBC-related interfaces, e.g., connections or channels.
serde_derive = { version = "1.0.104", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }
displaydoc = { version = "0.2", default-features = false }
## for codec encode or decode
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["full"], optional = true }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
## for borsh encode or decode
borsh = {version = "0.10.0", default-features = false, optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
cfg-if = { version = "1.0.0", optional = true }

[dependencies.tendermint-testgen]
version = "0.40.3"
optional = true
default-features = false

[dev-dependencies]
cfg-if = { version = "1.0.0" }
serde_json = "1"
env_logger = "0.10.0"
test-log = { version = "0.2.10", features = ["trace"] }
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
