[package]
name         = "ibc-types"
version      = "0.2.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "../../README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/penumbra-zone/ibc-types"
authors      = ["Penumbra Labs <team@penumbralabs.xyz"]
rust-version = "1.60"
description  = """
    Data types for the Inter-Blockchain Communication (IBC) protocol.
    This crate defines common data structures that can be reused by different IBC implementations or ecosystem tooling.
"""
# Not publishing to crates.io yet; will iterate quickly via git deps.
publish      = false
[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
    "bytes/std",
    "displaydoc/std",
    "erased-serde/std",
    "ibc-proto/std",
    "ics23/std",
    "num-traits/std",
    "primitive-types/std",
    "prost/std",
    "serde/std",
    "serde_json/std",
    "sha2/std",
    "subtle-encoding/std",
    "tendermint/clock",
    "tendermint/std",
    "tracing/std",
    "uint/std",
]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info"]
borsh = ["dep:borsh"]

# This feature is required for token transfer (ICS-20)
serde = ["dep:serde", "dep:serde_derive", "serde_json", "erased-serde"]

# This feature guards the unfinished implementation of the `UpgradeClient` handler.
upgrade_client = []

# This feature grants access to development-time mocking libraries, such as `MockContext` or `MockHeader`.
# Depends on the `testgen` suite for generating Tendermint light blocks.
mocks = ["tendermint-testgen", "tendermint/clock", "cfg-if", "parking_lot"]
mocks-no-std = ["cfg-if"]

[dependencies]
borsh = {version = "0.10.0", default-features = false, optional = true }
bytes = { version = "1.2.1", default-features = false }
cfg-if = { version = "1.0.0", optional = true }
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
displaydoc = { version = "0.2", default-features = false }
dyn-clone = "1.0.8"
erased-serde = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
ibc-proto = { git = "https://github.com/penumbra-zone/ibc-proto-rs", branch = "penumbra", version = "0.30.0", default-features = false, features = ["parity-scale-codec", "borsh"] }
ics23 = { version = "0.10.1", default-features = false, features = ["host-functions"] }
num-traits = { version = "0.2.15", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["full"], optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
prost = { version = "0.11", default-features = false }
safe-regex = { version = "0.2.5", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0.104", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, optional = true }
sha2 = { version = "0.10.6", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
time = { version = ">=0.3.0, <0.3.20", default-features = false }
tracing = { version = "0.1.36", default-features = false }
uint = { version = "0.9", default-features = false }

[dependencies.tendermint]
version = "0.31.1"
default-features = false

[dependencies.tendermint-proto]
version = "0.31.1"
default-features = false

[dependencies.tendermint-light-client-verifier]
version = "0.31.1"
default-features = false
features = ["rust-crypto"]

[dependencies.tendermint-testgen]
version = "0.31.1"
optional = true
default-features = false

[dev-dependencies]
cfg-if = { version = "1.0.0" }
env_logger = "0.10.0"
parking_lot = { version = "0.12.1" }
rstest = "0.16.0"
tendermint-rpc = { version = "0.31.1", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "0.31.1" } # Needed for generating (synthetic) light blocks.
test-log = { version = "0.2.10", features = ["trace"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
